gimpcellrenderertoggle: Replace depracted gtk_cell_renderer_get_size

Revert to calling gimp_cell_renderer_toggle_get_size as in the upstream
GIMP code. (Commit 5e064e2f9 ("[gimpcellrenderertoggle] Port to gtk 3")
changed this to the current version with no obvious reason.)

https://bugzilla.gnome.org/show_bug.cgi?id=786464